four DB working fine