@@ -35,6 +35,9 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.22.0</version>
 					<configuration>
+						<forkCount>3</forkCount>
+						<reuseForks>true</reuseForks>
+						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 						<testFailureIgnore>true</testFailureIgnore>
 						<suiteXmlFiles>
 							<suiteXmlFile>src/test/resources/runner/testng.xml</suiteXmlFile>
